--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
             <li>2</li>
             <li>3</li>
         </ol>
+        <ul>
+            <li>new item 1</li>
+            <li>new item 2</li>
+        </ul>
     </div>
 </body>
 </html>
