--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
             <li>new item 1</li>
             <li>new item 2</li>
         </ul>
+        <img src="./images/astronaut.jpg" height = "200px" width = "300px">
+        <div>This is a picture of an astronaut!</div>
     </div>
 </body>
 </html>
